mobile overflow solved

--- a/src/components/css/addToCart.css
+++ b/src/components/css/addToCart.css
@@ -1666,7 +1666,7 @@ width: 95%;
   }
   .clear-button {
   position: absolute;
-  right: 15px;
+  right: 25px;
   background: none;
   font-weight: bolder;
   border: none;
